css/layout.css
@font-face {
    font-family: 'uni_sans_demoheavy_caps';
    src: url('fonts/unisansdemo-heavycaps-webfont.eot');
    src: url('fonts/unisansdemo-heavycaps-webfont.eot?#iefix') format('embedded-opentype'), url('fonts/unisansdemo-heavycaps-webfont.woff2') format('woff2'), url('fonts/unisansdemo-heavycaps-webfont.woff') format('woff'), url('fonts/unisansdemo-heavycaps-webfont.ttf') format('truetype'), url('fonts/unisansdemo-heavycaps-webfont.svg#uni_sans_demoheavy_caps') format('svg');
    font-weight: normal;
    font-style: normal;
}

html {
    box-sizing: border-box;
    line-height: 1.15;
    /* Correct the line height in all browsers. */
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}

*, *:before, *:after {
    box-sizing: inherit;
}

:focus {
    outline: none !important;
}

body {
    padding: 0;
    margin: 0;
    font-size: 12px;
    position: relative;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    font-family: "uni_sans_demoheavy_caps", sans-serif;
}

.first-row-container {
    padding-top: 20px;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
}

#tooltip {
    position: absolute;
    height: auto;
    padding: 10px;
    font-size: 10px;
    background-color: #fff;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    pointer-events: none;
    z-index: 3;
}

#tooltip.hidden {
    display: none
}

#tooltip p {
    margin: 0;
    font-size: 16px;
    line-height: 20px
}

#tooltipGlobe {
    position: absolute;
    height: auto;
    padding: 10px;
    font-size: 10px;
    background-color: #fff;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    pointer-events: none;
    z-index: 3;
}

#tooltipGlobe.hidden {
    display: none
}

#tooltipGlobe p {
    margin: 0;
    font-size: 16px;
    line-height: 20px
}

.Tooltip {
    position: absolute;
    height: auto;
    padding: 10px;
    font-size: 10px;
    background-color: #fff;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    -moz-box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, .4);
    pointer-events: none;
    z-index: 3;
}

.Tooltip.hidden {
    display: none
}

.Tooltip p {
    margin: 0;
    font-size: 14px;
    line-height: 20px
}

nav {
    display: block;
}

select {
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    border: none;
    width: 100%;
    padding: 10px 15px 10px 15px;
    background: url(../data/FFFFFF-0.5.png) repeat;
    color: #fff;
    font-family: 'Open Sans', sans-serif;
    font-size: 16px;
    box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.3);
    border-radius: 3px;
    outline: none;
    cursor: pointer;
    line-height: 1.15;
    text-overflow: ellipsis;
}

@media (min-width:2000px) {
    body {
        font-size: 20px;
    }
    select {
        font-size: 20px;
        padding: 15px 15px 15px 15px;
    }
    #tooltip {
        font-size: 15px;
    }
}

select option {
    color: #666;
}

#change-data {
    max-width: 100%;
    min-width: 80px;
    padding-right: 15px;
    top: 15px;
    right: 15px;
    position: absolute;
    display: block;
    margin: 0 auto;
}

#change-data-globe {
    max-width: 100%;
    min-width: 80px;
    padding-right: 15px;
    top: 15px;
    right: 15px;
    position: absolute;
    display: block;
    margin: 0 auto;
}

.navigation-bar-container a, .navigation-bar-container a:hover {
    text-decoration: none;
}

.navigation-bar-container {
    background-color: rgba(77, 77, 77, 1.0);
}

.navigation-bar-content {
    display: flex;
    align-items: center;
    padding: 10px;
    flex-direction: row;
}

.project-logo-and-name {
    display: inline-flex;
    align-items: center;
}

a.project-logo-link {
    text-decoration: none;
}

.project-logo-link {
    display: inline;
}

.project-logo {
    height: 65px;
    vertical-align: middle;
}

.project-name {
    display: inline;
}

a.project-name, a.project-name:visited, a.project-name:hover {
    font-family: "uni_sans_demoheavy_caps", sans-serif;
    font-size: 50px;
    text-decoration: none;
    text-align: left;
    text-transform: none;
    margin-right: 20px;
    margin-left: 40px;
    overflow-wrap: break-word;
    font-variant: small-caps;
    color: rgb(224, 224, 224);
}

.project-name-color-letter {
    color: rgb(94, 189, 165);
}

.background {
    fill: rgba(77, 77, 77, 1.0);
    pointer-events: all;
    margin: 0 auto;
    max-width: 100px;
}

/* circle {
    stroke: #ffffff;
    stroke-width: .7;
} */

.land {
    stroke: #697971;
    stroke-linejoin: round;
    stroke-width: .7;

}
.land:hover {
    fill:#33CC33;
    stroke-width: 1px;
  }
.graticuleLine {
    fill: none;
    stroke: black;
    stroke-width: .5;
    opacity: .2;
}

.nicebox {
    position: absolute;
    text-align: center;
    font-family: "uni_sans_demoheavy_caps", "Arial", sans-serif;
    font-size: 13px;
    z-index: 5;
    box-shadow: 0 4px 6px -4px #333;
    padding: 5px 5px;
    background: rgb(255, 255, 255);
    background: linear-gradient(to bottom, rgba(255, 255, 255, 1) 0%, rgba(245, 245, 245, 1) 100%);
    border: rgb(229, 229, 229) 1px solid;
}

#controls {
    max-width: 100%;
    min-width: 80px;
    height: 35px;
    top: 15px;
    left: 30px;
    position: absolute;
    display: block;

}

#data-box {
    top: 40px;
    left: 500px;
    height: 45px;
    line-height: 45px;
    display: none;
}

#legend {
    display: flex;


}

.color-key {
    max-height: 15px;

}
#census-min{
    padding-right:5px;
}
#census-max{
    padding-left: 5px;
}

@media (max-width:2000px) {
    body {
        font-size: 20px;
    }
    select {
        font-size: 20px;
        padding: 15px 15px 15px 15px;
    }
    #tooltip {
        font-size: 15px;
    }
}

#data-value {
    font-size: 2.0em;
    font-weight: bold
}

#data-label {
    font-size: 2.0em;
    font-weight: normal;
    padding-right: 10px;
}

#data-label:after {
    content: ':'
}

#data-caret {
    margin-left: -5px;
    opacity: 0;
    font-size: 14px;
    width: 14px
}

#data-type {
    color: black;
}

#country1 {
    color: #dd0273;
}

#country2 {
    color: #3005bc;
}

#country3 {
    color: #01aa97;
}

#country4 {
    color: #8e0050;
}

.view-change {
    margin: 0 auto;
}

#change-view-button {
    background-color: rgba(77, 77, 77, 1.0);
    padding: 0px;
    width: 53px;
    height: 53px;
}

#view-image {
    width: 50px;
}

.date {
    color: white;
}

.scrollmenu {
    overflow: auto;
    white-space: nowrap;
    max-height: 200px;
    display:none;
  }

#oldestDate {
    font-size: 12px;
}

#oldestText {
    font-size: 12px;
}

